[project]
name = "instagram_post_flow"
version = "0.1.0"
description = "instagram_post_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0",
    "emoji>=2.14.1",
    "iso639>=0.1.4",
    "langdetect>=1.0.9",
    "lxml>=5.3.1",
    "nltk>=3.9.1",
    "playwright>=1.50.0",
    "psutil>=7.0.0",
]

[project.scripts]
kickoff = "instagram_post_flow.main:kickoff"
plot = "instagram_post_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
